<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/clear_log"
        android:titleCondensed="Clear"
        app:showAsAction="withText|always"/>

    <item
        android:id="@+id/action_pip"
        android:icon="@drawable/ic_pip"
        android:orderInCategory="200"
        android:title="@string/picture_in_picture"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_intent_explicit_here"
        android:orderInCategory="300"
        android:title="@string/explicit_intent_here"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_intent_explicit_adjacent"
        android:orderInCategory="300"
        android:title="@string/explicit_intent_adjacent"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_intent_implicit_here"
        android:orderInCategory="301"
        android:title="@string/implicit_intent_here"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_intent_implicit_adjacent"
        android:orderInCategory="301"
        android:title="@string/implicit_intent_adjacent"
        app:showAsAction="never"/>

</menu>